export const commonTr = {
  andConnector: ' ve ',
  back: 'Geri',
  cancel: 'İptal',
  cancelAction: 'İptal et',
  close: 'Kapat',
  clear: 'Temizle',
  collapseLink: 'Bağlantıyı daralt',
  continue: 'Devam et',
...
